Correct all images links and provide sprites

--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -11,8 +11,11 @@
     ".md",
     ".html"
   ],
+  "ignoreUppercase": true,
   "dictionary": [
     "микрошаблонизац*",
+    "седон*",
+    "sedon*",
     "постпроцессинг*",
     "контент*",
     "вьюпорт*",
