--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "NTH-start-project",
+  "name": "Sedona",
   "version": "2.0.1",
-  "description": "Start a library of blocks and technical solutions for HTML/CSS/js page layout.",
-  "author": "Nikolay Gromov",
+  "description": "Study project Sedona from HTML Academy",
+  "author": "Alstof",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nicothin/NTH-start-project.git"
+    "url": "https://github.com/al1s/sedona.git"
   },
   "scripts": {
     "test:style": "stylelint \"src/**/*.scss\" --syntax=scss",
