--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "imagemin-pngquant": "^5.0.0",
     "lint-staged": "^3.4.0",
     "merge-stream": "^1.0.1",
+    "normalize.css": "^6.0.0",
     "postcss-import": "^9.1.0",
     "postcss-inline-svg": "^2.3.0",
     "stylelint": "^7.9.0",
