Add the sprite with svg for a masthead

--- a/projectConfig.json
+++ b/projectConfig.json
@@ -9,6 +9,7 @@
     "search": [],
     "footer": [],
     "sprite-png": [],
+    "sprite-svg": [],
     "to-top": [],
     "social": [],
     "icon": [],
